--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <link href="styles/style.css" rel="stylesheet" type="text/css">
 <link href="styles/index.css" rel="stylesheet" type="text/css">
 
+<link href="styles/main.css" rel="stylesheet" type="text/css">
+
 <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:700,400' rel='stylesheet' type='text/css'>-->
 <!-- link href="styles/screen-transitions.css" rel="stylesheet" type="text/css"-->
 <link href="plugins/toastmessage/jquery.toastmessage.css" rel="stylesheet" type="text/css">
