--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <script src="scripts/filters/filters.js" ></script>
 <!-- Directives -->
 <!-- Services -->
+<script src="scripts/services/fileReader.js" ></script>
 <!-- Controllers -->
 <script src="scripts/controllers/main.js" ></script>
 <!-- Route -->
